#13 - 13-parametrized-unit-test - LocationEntityCoordinatesValidator class tested, cut and change data in csv file with addresses, small refactor and improvements the code